Fix cart wrapping.

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -55,6 +55,7 @@ a {
 main {
   display: flex;
   padding-top: 3.5em;
+  flex-wrap: wrap;
 }
 
 main > section {
@@ -64,13 +65,13 @@ main > section {
 }
 
 #cart-items-container {
-  flex-basis: 66%;
-  padding: 0 0.9375em 0 0.9375em;
+  flex-basis: 60%;
+  padding: 0.9375em;
 }
 
 #cart-summary-container {
-  flex-basis: 34%;
-  padding: 0 0.9375em 0 0.9375em;
+  flex-basis: 30%;
+  padding: 0.9375em;
 }
 
 #cart-items, #cart-summary {  
